--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@candlefinance/slider",
   "version": "0.1.0",
-  "description": "test",
+  "description": "A little (horizontal) animated slider component for React Native.",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
